@@ -2,49 +2,84 @@ package com.sep.comiverse.controller;
 
 import com.sep.comiverse.dto.ChapterPageDTO;
 import com.sep.comiverse.entity.PageTranslationEntity;
-import com.sep.comiverse.repository.IChapterRepository;
+import com.sep.comiverse.entity.ProjectTeamEntity;
+import com.sep.comiverse.entity.enums.PageStatus;
 import com.sep.comiverse.repository.IPageTranslationRepository;
-import com.sep.comiverse.repository.ITeamTaskRepository;
+import com.sep.comiverse.repository.IProjectTeamRepository;
+import com.sep.comiverse.security.UserPrincipal;
+import com.sep.comiverse.service.TranslatorPaymentService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Controller
+@RequiredArgsConstructor
 public class PageController {
     private final IPageTranslationRepository pageTranslationRepository;
-
-    public PageController(IPageTranslationRepository pageTranslationRepository) {
-        this.pageTranslationRepository = pageTranslationRepository;
-    }
+    private final IProjectTeamRepository projectTeamRepository;
+    private final TranslatorPaymentService translatorPaymentService;
 
     @GetMapping("/translate-workspace/{taskId}")
     public ResponseEntity<?> getPagesForTask(@PathVariable UUID taskId) {
         List<PageTranslationEntity> pages = pageTranslationRepository.findByTaskId_IdOrderByPageNumberAsc(taskId);
-
-        List<ChapterPageDTO> result = pages.stream()
-                .map(this::toPageDetailDto)
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(result);
+        return ResponseEntity.ok(pages.stream().map(this::toPageDetailDto).toList());
     }
 
     @PutMapping("/translate-workspace/pages/{pageId}/bubbles")
-    public ResponseEntity<?> saveBubbles(@PathVariable UUID pageId, @RequestBody ChapterPageDTO request) {
-        PageTranslationEntity page = pageTranslationRepository.findById(pageId)
-                .orElse(null);
-
-        if (page == null) {
-            return ResponseEntity.notFound().build();
+    public ResponseEntity<?> saveBubbles(
+            @PathVariable UUID pageId,
+            @RequestBody ChapterPageDTO request,
+            @AuthenticationPrincipal UserPrincipal principal
+    ) {
+        PageTranslationEntity page = pageTranslationRepository.findById(pageId).orElse(null);
+        if (page == null) return ResponseEntity.notFound().build();
+        if (!canEditPage(principal, page)) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                    .body(Map.of("success", false, "message", "You are not assigned to this page"));
+        }
+        if (page.getTaskId() != null && isLockedForReview(page.getTaskId().getStatus())) {
+            return ResponseEntity.status(HttpStatus.CONFLICT)
+                    .body(Map.of("success", false, "message", "Pages cannot be edited while the task is under review or completed"));
         }
 
         page.setBubbles(request.getBubbles() != null ? request.getBubbles() : "[]");
         pageTranslationRepository.save(page);
-
         return ResponseEntity.ok(toPageDetailDto(page));
+    }
+
+    @PutMapping("/translate-workspace/pages/{pageId}/status")
+    public ResponseEntity<?> updatePageStatus(
+            @PathVariable UUID pageId,
+            @RequestBody Map<String, String> body,
+            @AuthenticationPrincipal UserPrincipal principal
+    ) {
+        PageTranslationEntity page = pageTranslationRepository.findById(pageId).orElse(null);
+        if (page == null) return ResponseEntity.notFound().build();
+        if (!canEditPage(principal, page)) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                    .body(Map.of("success", false, "message", "You are not assigned to this page"));
+        }
+        if (page.getTaskId() != null && isLockedForReview(page.getTaskId().getStatus())) {
+            return ResponseEntity.status(HttpStatus.CONFLICT)
+                    .body(Map.of("success", false, "message", "Page status cannot be changed while the task is under review or completed"));
+        }
+
+        PageStatus status;
+        try {
+            status = PageStatus.valueOf(String.valueOf(body.get("status")).trim().toUpperCase(Locale.ROOT));
+        } catch (RuntimeException ex) {
+            return ResponseEntity.badRequest()
+                    .body(Map.of("success", false, "message", "Status must be TODO or DONE"));
+        }
+        return ResponseEntity.ok(toPageDetailDto(translatorPaymentService.updatePageStatus(page, status)));
     }
 
     private ChapterPageDTO toPageDetailDto(PageTranslationEntity page) {
@@ -54,6 +89,26 @@ public class PageController {
                 .imageUrl(page.getImageUrl())
                 .status(page.getStatus())
                 .bubbles(page.getBubbles())
+                .reviewBaselineBubbles(page.getReviewBaselineBubbles())
+                .assignedTranslatorId(page.getAssignedTranslatorId())
+                .responsibilityFactor(page.getResponsibilityFactor())
+                .completedAt(page.getCompletedAt())
                 .build();
+    }
+
+    private boolean canEditPage(UserPrincipal principal, PageTranslationEntity page) {
+        if (principal == null || principal.getId() == null || page == null) return false;
+        if (principal.getId().equals(page.getAssignedTranslatorId())) return true;
+        if (!"PROJECT_LEADER".equalsIgnoreCase(principal.getRole()) || page.getTaskId() == null) return false;
+        ProjectTeamEntity team = projectTeamRepository.findById(page.getTaskId().getProjectTeamId()).orElse(null);
+        return team != null && principal.getId().equals(team.getLeaderId());
+    }
+
+    private boolean isLockedForReview(String status) {
+        if (status == null) return false;
+        String normalized = status.trim().toLowerCase(Locale.ROOT).replace('-', '_').replace(' ', '_');
+        return normalized.equals("under_review")
+                || normalized.equals("completed")
+                || normalized.equals("published");
     }
 }
